<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_engine_preferences">
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_engine_function_dialog_title"
            android:entries="@array/settings_engine_function_preferences"
            android:entryValues="@array/settings_engine_function_values"
            android:key="settings_engine_function"
            android:summary="@string/settings_engine_function_summary"
            android:title="@string/settings_engine_function_title" />
        <ListPreference
            android:defaultValue="1|1|1"
            android:dialogTitle="@string/settings_strength_dialog_title"
            android:entries="@array/settings_engine_strengh_preferences"
            android:entryValues="@array/settings_engine_strengh_values"
            android:key="settings_engine_strength"
            android:summary="@string/setting_strength_preference_summary"
            android:title="@string/settings_strength_preference_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_engine_practice_mode"
            android:summary="@string/settings_engine_practice_mode_summary"
            android:title="@string/settings_engine_practice_mode_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_engine_auto_make_moves"
            android:summary="@string/settings_engine_auto_make_moves_summary"
            android:title="@string/settings_engine_auto_make_moves_title" />
        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/settings_engine_randomness_title"
            android:entries="@array/settings_engine_randomness_preferences"
            android:entryValues="@array/settings_engine_randomness_values"
            android:key="settings_engine_randomness"
            android:summary="@string/settings_engine_randomness_summary"
            android:title="@string/settings_engine_randomness_title" />
        <ListPreference
            android:defaultValue="None"
            android:entries="@array/settings_engine_opening_names"
            android:entryValues="@array/settings_engine_opening_values"
            android:key="settings_engine_force_opening"
            android:summary="@string/settings_engine_force_opening_summary"
            android:title="@string/settings_engine_force_opening_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_engine_human_openings"
            android:summary="@string/settings_engine_human_openings_summary"
            android:title="@string/settings_engine_human_openings_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settings_engine_use_book"
            android:summary="@string/settings_engine_use_book_summary"
            android:title="@string/settings_engine_use_book_title" />
        <EditTextPreference
            android:defaultValue=""
            android:key="settings_sendmail"
            android:maxLength="255"
            android:summary="@string/settings_sendmail_summary"
            android:title="@string/settings_sendmail_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_ui_preferences">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/setting_language_names"
            android:entryValues="@array/setting_language_codes"
            android:key="@string/settings_ui_language_key"
            android:summary="@string/settings_ui_language_summary"
            android:title="@string/settings_ui_language_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settings_ui_display_moves"
            android:summary="@string/settings_ui_display_moves_summary"
            android:title="@string/settings_ui_display_moves_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settings_ui_display_last_move"
            android:summary="@string/settings_ui_display_last_move_summary"
            android:title="@string/settings_ui_display_last_move_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settings_ui_display_pv"
            android:summary="@string/settings_ui_display_pv_summary"
            android:title="@string/settings_ui_display_pv_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settings_ui_display_enable_animations"
            android:summary="@string/settings_ui_display_enable_animations_summary"
            android:title="@string/settings_ui_display_enable_animations_title" />
    </PreferenceCategory>
</PreferenceScreen>
