<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_new_game"
        android:icon="@drawable/ic_menu_play"
        android:title="@string/menu_item_new_game" />
    <item
        android:id="@+id/menu_hint"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/menu_item_hint" />
    <item
        android:id="@+id/menu_take_back"
        android:icon="@drawable/ic_menu_back"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_item_undo" />
    <item
        android:id="@+id/menu_take_redo"
        android:icon="@drawable/ic_menu_next"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_item_redo" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_item_settings" />
    <item
        android:id="@+id/menu_switch_sides"
        android:icon="@drawable/ic_menu_switch_sides"
        android:title="@string/menu_item_switch_sides" />
    <item
        android:id="@+id/menu_donate"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_item_donate" />
    <item
        android:id="@+id/menu_mail"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_item_mail" />
    <item
        android:id="@+id/menu_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_item_quit" />
</menu>
