<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_margin="50dp"
        android:contentDescription="@string/app_name"
        android:drawingCacheQuality="auto"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="30sp"
        android:text="@string/spash_layout_message"
        android:textColor="#CFB53B"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible" />

    <TextView
        android:id="@+id/splash_text_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_text"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="30sp"
        android:text="@string/spash_layout_message_2"
        android:textColor="#CFB53B"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/splash_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/splash_text_2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:clickable="false"
        android:visibility="visible" />


</RelativeLayout>
